--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
 <html>
-<h1> Página do prof. Aldisio Medeiros </h1>
+    <head>
+      <title>Minha página PWA</title>
+    </head>
+  <body>
+    <h1>Minha página PWA</h1>
+    <h4>Página do Prof. Aldísio Medeiros</h5>
+    <p> Este é um exemplo de parágrafo na minha página web</p>
+  </body>
 </html>
