--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<html>
-    <head>
-      <title>Minha página PWA</title>
-    </head>
-  <body>
-    <h1>Minha página PWA</h1>
-    <h4>Página do Prof. Aldísio Medeiros</h5>
-    <p> Este é um exemplo de parágrafo na minha página web</p>
-  </body>
+<!-- index.html -->
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lista de Tarefas PWA</title>
+    <link rel="manifest" href="/manifest.json">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Lista de Tarefas</h1>
+    <input type="text" id="nova-tarefa" placeholder="Nova tarefa">
+    <button onclick="adicionarTarefa()">Adicionar</button>
+    <ul id="lista-tarefas"></ul>
+    <script src="app.js"></script>
+</body>
 </html>
