--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+
+
+
 <!-- index.html -->
 <!DOCTYPE html>
 <html lang="pt-BR">
@@ -9,10 +12,22 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Lista de Tarefas</h1>
-    <input type="text" id="nova-tarefa" placeholder="Nova tarefa">
-    <button onclick="adicionarTarefa()">Adicionar</button>
-    <ul id="lista-tarefas"></ul>
-    <script src="app.js"></script>
+    <div class="MainContainer">
+
+        <div class="Parallax">
+          // Conteúdo
+        </div>
+      
+        <div class="Content">
+          <div class="Content1">
+             
+                <h1>Lista de Tarefas</h1>
+                <input type="text" id="nova-tarefa" placeholder="Nova tarefa">
+                <button onclick="adicionarTarefa()">Adicionar</button>
+                <ul id="lista-tarefas"></ul>
+                <script src="app.js"></script>
+          </div>
+        </div>
+      </div>
 </body>
 </html>
