--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         .parallax {
             position: relative;
             height: 100vh; /* Full screen height */
-            background-image: url('https://via.placeholder.com/1920x1080'); /* Replace with your image */
+            background-image: url('/icons/bg-list-tasks.jpg'); /* Replace with your image */
             background-attachment: fixed; /* Fix the background image */
             background-position: center;
             background-repeat: no-repeat;
