--- a/index.html
+++ b/index.html
@@ -13,20 +13,23 @@
 </head>
 <body>
 
+    <!-- Parallax Section -->
+    <div class="parallax1"></div>
+
+     <!-- Content Section -->
+     <div class="content">
+        <h1>Lista de Tarefas</h1>
+        <input type="text" id="nova-tarefa" placeholder="Escreva uma nova tarefa">
+        <button onclick="adicionarTarefa()">Adicionar</button>
+        <ul id="lista-tarefas"></ul>
+        <script src="app.js"></script>
+     </div>
+
+
      <!-- Parallax Section -->
-    <div class="parallax"></div>
+    <div class="parallax2"></div>
 
-    <!-- Content Section -->
-    <div class="content">
-       <h1>Lista de Tarefas</h1>
-                <input type="text" id="nova-tarefa" placeholder="Nova tarefa">
-                <button onclick="adicionarTarefa()">Adicionar</button>
-                <ul id="lista-tarefas"></ul>
-                <script src="app.js"></script>
-    </div>
-
-    <!-- Another Parallax Section -->
-    <div class="parallax"></div>
+   
     
 </body>
 </html>
