First PWA sample

--- a/index.html
+++ b/index.html
@@ -1,27 +1,16 @@
-<html lang="pt-BR">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Tarefas PWA</title>
-    <link rel="manifest" href="/manifest.json">
-    <link rel="stylesheet" href="/styles.css">
-    
+    <title>Minha PWA</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
-
-     <!-- Parallax Section -->
-    <div class="parallax"></div>
-
-    <!-- Content Section -->
-    <div class="content">
-       <h1>Lista de Tarefas</h1>
-        <input type="text" id="nova-tarefa" placeholder="Nova tarefa">
-        <button onclick="adicionarTarefa()">Adicionar</button>
-        <ul id="lista-tarefas"></ul>        
-    </div>
-
-    <!-- Another Parallax Section -->
-    <div class="parallax"></div>
-    <script src="/app.js"></script>
+    <h1>Bem vindo a minha primeira PWA</h1>
+    <h4>Desensolvida por: Fulano</h4>
+    <p>Este é um exemplo de parágrafo.</p>
+    <script src="app.js"></script>
 </body>
 </html>
