Mapa do leaflet

--- a/index.html
+++ b/index.html
@@ -3,93 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha Calculadora PWA</title>
+    <title>Leaflet Map Example</title>
+    <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 0;
+            padding: 0;
         }
-        .calculator {
-            max-width: 300px;
-            margin: 0 auto;
+        #map {
+            height: 90vh; /* Define altura do mapa */
         }
-        input {
-            width: calc(100% - 20px);
-            margin-bottom: 10px;
-            padding: 5px;
-        }
-        button {
-            width: 48%;
+        #info {
             padding: 10px;
-            margin: 1%;
-            cursor: pointer;
+            background: #f9f9f9;
+            border: 1px solid #ddd;
+            font-size: 14px;
+            text-align: center;
         }
     </style>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="manifest" href="manifest.json">
-     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-     crossorigin=""/>
-    <!-- Make sure you put this AFTER Leaflet's CSS -->
- <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-     crossorigin=""></script>
-    <script> var map = L.map('map').setView([51.505, -0.09], 13); </script>
 </head>
 <body>
-   <div class="calculator">
-        <h2>Calculadora</h2>
-        <form id="calcForm">
-            <label for="number1">Número 1:</label><br>
-            <input type="number" id="number1" required><br>
-            <label for="number2">Número 2:</label><br>
-            <input type="number" id="number2" required><br>
-            <label for="result">Resultado:</label><br>
-            <input type="text" id="result" readonly><br>
-            <button type="button" onclick="calculate('add')">Somar</button>
-            <button type="button" onclick="calculate('subtract')">Subtrair</button>
-            <button type="button" onclick="calculate('multiply')">Multiplicar</button>
-            <button type="button" onclick="calculate('divide')">Dividir</button>
-        </form>
-    </div>
-    <script>
-        function calculate(operation) {
-            const num1 = parseFloat(document.getElementById("number1").value);
-            const num2 = parseFloat(document.getElementById("number2").value);
-            let result;
-
-            if (isNaN(num1) || isNaN(num2)) {
-                alert("Por favor, insira números válidos.");
-                return;
-            }
-
-            switch (operation) {
-                case 'add':
-                    result = num1 + num2;
-                    break;
-                case 'subtract':
-                    result = num1 - num2;
-                    break;
-                case 'multiply':
-                    result = num1 * num2;
-                    break;
-                case 'divide':
-                    if (num2 === 0) {
-                        alert("Divisão por zero não é permitida.");
-                        return;
-                    }
-                    result = num1 / num2;
-                    break;
-                default:
-                    alert("Operação inválida.");
-                    return;
-            }
-
-            document.getElementById("result").value = result;
-        }
-    </script>
-    <script src="app.js"></script>
+    <div id="info">Clique no botão abaixo para mostrar sua localização.</div>
     <div id="map"></div>
-    
+    <!-- Leaflet JavaScript -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
